for some reason moving tbody to thead fixed spacing issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
   font-family: "Poppins", sans-serif;
   min-width: 50%;
   background-color: #fff;
+  margin: 0;
 }
 
 .container {
@@ -264,10 +265,8 @@ button {
 } */
 
 .offset {
-}
-
-.outer {
-  position: relative;
+  margin: 0;
+  margin-top: 3%;
 }
 
 .weekly-calendar {
@@ -278,14 +277,11 @@ button {
   border-radius: 8px;
 }
 .wrap {
+  display: flex;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 550px;
   border-radius: 8px;
-}
-
-thead {
-  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
 thead th {
@@ -445,7 +441,6 @@ tbody tr td {
   */
 
 td:hover:after {
-  content: "+";
   vertical-align: middle;
   font-size: 1.875rem;
   font-weight: 100;
@@ -501,4 +496,24 @@ tr td:nth-child(3),
 
 .icon:hover {
   color: red;
+}
+
+/* custom scrollbar from https://dev.to/gaberomualdo/how-to-create-a-beautiful-custom-scrollbar-for-your-site-in-plain-css-1mjg*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
